--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -112,14 +112,17 @@
   /* **************** Reusable Elements **************** */
   .theme__navbar {
     padding: 15px 0 !important;
+    padding-left: 0 !important;
   }
   .theme__navbar .container.d-flex{
     padding: 0;
   }
   .theme__navbar .navbar-brand {
     padding-left: 20px;
+    padding-bottom: 15px;
   }
   .theme__navbar .mobile__toggler {
+    padding-bottom: 15px;
     padding-right: 10px;
   }
   .section {
