--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -981,3 +981,98 @@ footer .social-icons a:hover {
   color: #444;
   line-height: 1.6;
 }
+
+
+
+
+
+
+
+
+
+/* ========= brand menu ========== */
+
+
+/* dropdown wrapper */
+.brand-menu {
+  padding: 1rem 1.5rem;
+  background: transparent;
+  border: none;
+  box-shadow: none;
+  min-width: 55vw;
+  transform: translateX(-50%);
+}
+
+/* grid for brand cards */
+.brand-grid {
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+}
+
+/* brand card button */
+.brand-card {
+  flex: 1 1 120px;
+  max-width: 160px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: var(--bg-gradient);
+  border-radius: 1rem;
+  padding: 1.5rem;
+  transition: transform 0.3s ease;
+  color: #fff !important;
+}
+
+.brand-card img {
+  max-height: 40px;
+  filter: brightness(0) invert(1); /* white logos */
+}
+
+.brand-card:hover {
+  transform: translateY(-5px);
+}
+
+
+
+
+/* =========== Home product swiper ============== */
+
+.product-swiper {
+  width: 100%;
+  /* height: 300px; */
+}
+
+.product-swiper .swiper-slide {
+  /* width: 200px; */
+  height: 100%;
+  border-radius: 12px;
+  overflow: hidden;
+}
+
+.product-swiper .swiper-slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 12px;
+}
+
+/* Special tweak for middle row (a bit centered) */
+.swiper-rtl .swiper-wrapper {
+  justify-content: center;
+}
+
+.home__slider_card{
+  background: #030202;
+  border-radius: 50px;
+  overflow: hidden;
+  height: 450px;
+}
+
+
+
+
+
+
+
+
